--- a/eva-daemon/Cargo.toml
+++ b/eva-daemon/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eva-daemon"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2021"
 authors = ["Jose R F Junior <jrfjunior@example.com>"]
 description = "EVA AI Voice Assistant for Redox OS"
@@ -18,7 +18,13 @@ futures-util = "0.3"
 url = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-base64 = "0.22"
+base64 = "0.21"
+regex = "1.10"
+
+# Terminal UI
+crossterm = "0.27"
+ratatui = "0.26"
+unicode-width = "0.1"
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.5"
