--- a/eva-daemon/Cargo.toml
+++ b/eva-daemon/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.21"
 regex = "1.10"
+sysinfo = "0.29"
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.5"
