--- a/eva-daemon/Cargo.toml
+++ b/eva-daemon/Cargo.toml
@@ -21,6 +21,14 @@ serde_json = "1.0"
 base64 = "0.21"
 regex = "1.10"
 sysinfo = "0.29"
+ort = { version = "2.0", features = ["cuda", "directml"] }
+image = "0.25"
+screenshots = "0.4"
+rusqlite = { version = "0.32", features = ["bundled"] }
+chrono = { version = "0.4", features = ["serde"] }
+aes-gcm = "0.10"
+argon2 = "0.5"
+flate2 = "1.0"
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.5"
